@startuml
top to bottom direction
title 类图
abstract class User{
    int id
    string name
    string github（github地址）
    string sex
    string picture
}
User<|--Student
class Student{
    int studentNumber（学号）
    string class（班级）
}
User<|--Teacher
class Teacher{
    int teacherNumber（工号）
    string office（办公室）
    string phone
}
class Login{
    int id
    int username（学生账号就是学号，老师账号是工号）
    string password
    int role（角色）
}
class Scoreitem{
    int id
    int completeScore (完成度得分）
    int complexScore（复杂度得分）
    int answerScore (答辩得分)
}
note right:一个scoreitem实例就表示了一个\n学生的一个实验成绩
class Course{
    int id
    int courseNum
    string name
    string term
    float credit（学分）
}
class Experiment{
    int id
    string name（实验名）
    Date date（实验发布时间）
    string github（实验的github地址）
    int courseId（与Course类的id关联）
}
class Experimentcore{
    int id
    int studentId (与学生关联)
    int scoreitemId (与scoreitem关联)
}
class StudentCourse{
    int id
    int studentId
    int courseId
}
note right:“学生选课”类
class TeacherCourse{
    int id
    int teacherId
    int courseId
}
note right:“老师选课”类
Student "1" -- "n" StudentCourse
StudentCourse "n" -- "1" Course
Teacher "1" -- "n" TeacherCourse
TeacherCourse "n" -- "1" Course
Experiment  "n" -- "1" Course
Scoreitem "n" -- "1" Experiment
Experimentscore "n" -- "1" Scoreitem
Experimentscore "n" -- "1" Student
@enduml